# EECS442Project

./: .gitignore  CMakeLists.txt  DetectionTracker.cpp  DetectionTracker.h  DetectorTest.cpp  load_caen_settings.sh  motion_detect.py  motion_detect_optical_flow.py
